Split off linnet code from spatstat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ export("flatdensityfunlpp")
 export("formula.lppm")
 export("getlambda.lpp")
 export("heatkernelapprox")
+export("identify.lpp")
 export("insertVertices")
 export("integral.linfun")
 export("integral.linim")
@@ -172,6 +173,8 @@ export("lppm")
 export("lppm.formula")
 export("lppm.lpp")
 export("makeLinnetTolerance")
+export("marks<-.lintess")
+export("marks.lintess")
 export("marks<-.lpp")
 export("Math.linim")
 export("mean.linim")
@@ -208,6 +211,7 @@ export("print.summary.linim")
 export("print.summary.linnet")
 export("print.summary.lintess")
 export("print.summary.lpp")
+export("pseudoR2.lppm")
 export("qkdeEngine")
 export("quantile.linim")
 export("rcelllpp")
@@ -217,6 +221,8 @@ export("resampleNetworkDataFrame")
 export("rescale.linnet")
 export("rescale.lpp")
 export("resolve.heat.steps")
+export("rhohat.lpp")
+export("rhohat.lppm")
 export("rlpp")
 export("rotate.linnet")
 export("rotate.lpp")
@@ -231,6 +237,7 @@ export("shift.linnet")
 export("shift.lpp") 
 export("simulate.lppm")
 export("sortalongsegment")
+export("subset.lpp")
 export("summary.linfun")
 export("summary.linim")
 export("Summary.linim")
@@ -240,6 +247,7 @@ export("summary.lpp")
 export("summary.lppm")
 export("superimpose.lpp")
 export("terms.lppm")
+export("text.lpp")
 export("thinNetwork")
 export("tile.lengths")
 export("treebranchlabels")
@@ -248,6 +256,7 @@ export("unitname<-.linnet")
 export("unitname.linnet")
 export("unitname<-.lpp")
 export("unitname.lpp")
+export("unmark.lintess")
 export("unmark.lpp")
 export("update.lppm")
 export("validate.lpp.coords")
@@ -325,6 +334,7 @@ S3method("extractbranch", "linnet")
 S3method("extractbranch", "lpp")
 S3method("fitted", "lppm")
   S3method("formula", "lppm")
+ S3method("identify", "lpp")
 S3method("integral", "linfun")
 S3method("integral", "linim")
 S3method("intensity", "lpp")
@@ -334,6 +344,7 @@ S3method("intensity", "lpp")
   S3method("[", "lpp")
 S3method("lppm", "formula")
 S3method("lppm", "lpp")
+S3method("marks", "lintess")
   S3method("mean", "linim")
   S3method("median", "linim")
   S3method("nncross", "lpp")
@@ -365,10 +376,13 @@ S3method("print", "summary.linim")
 S3method("print", "summary.linnet")
 S3method("print", "summary.lintess")
 S3method("print", "summary.lpp")
+  S3method("pseudoR2", "lppm")
   S3method("quantile", "linim")
 S3method("relrisk", "lpp")
   S3method("rescale", "linnet")
   S3method("rescale", "lpp")
+S3method("rhohat", "lpp")
+S3method("rhohat", "lppm")
   S3method("rotate", "linnet")
   S3method("rotate", "lpp")
   S3method("scalardilate", "linim")
@@ -378,6 +392,7 @@ S3method("relrisk", "lpp")
   S3method("shift", "linnet")
   S3method("shift", "lpp")
   S3method("simulate", "lppm")
+S3method("subset", "lpp")
   S3method("summary", "linfun")
   S3method("summary", "linim")
 S3method("summary", "linnet")
@@ -386,8 +401,10 @@ S3method("summary", "lpp")
   S3method("summary", "lppm")
   S3method("superimpose", "lpp")
   S3method("terms", "lppm")
+S3method("text", "lpp")
 S3method("unitname", "linnet")
 S3method("unitname", "lpp")
+S3method("unmark", "lintess")
 S3method("unmark", "lpp")
   S3method("update", "lppm")
   S3method("valid", "lppm")
@@ -400,6 +417,7 @@ S3method("Window", "lintess")
 #      Assignment methods                   
 # ......................................... 
   S3method("[<-", "linim")
+S3method("marks<-", "lintess")
 S3method("marks<-", "lpp")
 S3method("unitname<-", "linnet")
 S3method("unitname<-", "lpp")
