--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 1.1-1
-Date: 2020-06-17
+Version: 1.1-3
+Date: 2020-07-06
 Title: Linear networks functionality of the 'spatstat' package
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -23,8 +23,8 @@ Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.3.0), spatstat.data (>= 1.4-2), spatstat.core, stats, graphics, grDevices, utils, methods, nlme, rpart
 Imports: spatstat.utils (>= 1.17-0), spatstat.sparse, mgcv, Matrix, deldir (>= 0.0-21), abind, tensor, polyclip (>= 1.10-0), goftest (>= 1.2-2)
 Suggests: sm, maptools (>= 0.9-9), gsl, locfit, spatial, RandomFields (>= 3.1.24.1), RandomFieldsUtils(>= 0.3.3.1), fftwtools (>= 0.9-8)
-Description: This is an experimental package containing  
-	     the code in the 'spatstat' package for linear networks. 
+Description: This is a subset of the 'spatstat' package, containing
+	     its functionality for spatial data on a linear network. 
 License: GPL (>= 2)
 URL: http://www.spatstat.org
 LazyData: true
