--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
 Version: 1.2-0
-Date: 2020-12-07
+Date: 2020-12-13
 Title: Linear Networks Functionality of the 'spatstat' Package
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -20,10 +20,10 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Suman", "Rakshit",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 1.4-2), spatstat.geom (>= 1.65-0), spatstat.core (>= 1.65-0), stats, graphics, grDevices, utils, methods, nlme, rpart
-Imports: spatstat.utils (>= 1.17-0), spatstat.sparse, mgcv, Matrix, deldir (>= 0.0-21), abind, tensor, polyclip (>= 1.10-0), goftest (>= 1.2-2)
-Suggests: sm, maptools (>= 0.9-9), gsl, locfit, spatial, RandomFields (>= 3.1.24.1), RandomFieldsUtils(>= 0.3.3.1), fftwtools (>= 0.9-8)
-Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.sparse, spatstat/spatstat.geom, spatstat/spatstat.core, baddstats/polyclip
+Depends: R (>= 3.5.0), spatstat.data (>= 1.4-2), spatstat.geom (>= 1.65-0), spatstat.core (>= 1.65-0), stats, graphics, grDevices, utils, methods
+Imports: spatstat.utils (>= 1.17-0), spatstat.sparse, Matrix
+Suggests: maptools (>= 0.9-9), RandomFields (>= 3.1.24.1), RandomFieldsUtils(>= 0.3.3.1), fftwtools (>= 0.9-8)
+Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.sparse, spatstat/spatstat.geom, spatstat/spatstat.core
 Description: This is a subset of the 'spatstat' package, containing
 	     its functionality for spatial data on a linear network. 
 License: GPL (>= 2)
