--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
 Version: 1.65-0
-Date: 2020-12-21
+Date: 2021-01-06
 Title: Linear Networks Functionality of the 'spatstat' Package
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -27,7 +27,7 @@ Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.geom
 Description: This is a subset of the 'spatstat' package, containing
 	     its functionality for spatial data on a linear network. 
 License: GPL (>= 2)
-URL: http://www.spatstat.org
+URL: http://spatstat.org
 LazyData: true
 NeedsCompilation: yes
 ByteCompile: true
