--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 1.65-4
-Date: 2021-02-02
+Version: 1.65-5
+Date: 2021-02-07
 Title: Linear Networks Functionality of the 'spatstat' Package
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -22,7 +22,8 @@ Authors@R: c(person("Adrian", "Baddeley",
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.5.0), spatstat.data (>= 1.4-2), spatstat.geom (>= 1.65-0), spatstat.core (>= 1.65-0), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 1.17-0), Matrix
-Suggests: 
+Suggests: goftest, locfit
+Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.geom, spatstat/spatstat.core
 Description: This is a subset of the 'spatstat' package, containing
 	     its functionality for spatial data on a linear network. 
 License: GPL (>= 2)
