--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spatstat.linnet
-Version: 1.65-6
-Date: 2021-02-11
-Title: Linear Networks Functionality of the 'spatstat' Package
+Version: 1.65-7
+Date: 2021-02-17
+Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
        	            email = "Adrian.Baddeley@curtin.edu.au"),
@@ -24,8 +24,10 @@ Depends: R (>= 3.5.0), spatstat.data (>= 1.4-2), spatstat.geom (>= 1.65-0), spat
 Imports: spatstat.utils (>= 1.17-0), Matrix
 Suggests: goftest, locfit
 Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.geom, spatstat/spatstat.core
-Description: This is a subset of the 'spatstat' package, containing
-	     its functionality for spatial data on a linear network. 
+Description: Defines types of spatial data on a linear network
+	     and provides functionality for geometrical operations,
+	     data analysis and modelling of data on a linear network,
+	     in the 'spatstat' family of packages.
 License: GPL (>= 2)
 URL: http://spatstat.org/
 LazyData: true
