densityHeat renamed densityHeat.lpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,7 +94,7 @@ export("deletebranch.linnet")
 export("deletebranch.lpp")
 export("densityEqualSplit")
 export("densityfun.lpp")
-export("densityHeat")
+export("densityHeat.lpp")
 export("density.linnet")
 export("density.lpp")
 export("densitypointsLPP")
