adjusted to spatstat 2.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -361,6 +361,7 @@ S3method("connected", "lpp")
 S3method("deletebranch", "linnet")
 S3method("deletebranch", "lpp")
 S3method("densityfun", "lpp")
+  S3method("densityHeat", "lpp")
   S3method("density", "linnet")
 S3method("density", "lpp")
 S3method("density", "splitppx")
