--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
 Version: 2.0-0
-Date: 2021-03-16
+Date: 2021-03-18
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -20,7 +20,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Suman", "Rakshit",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 2.0-1), spatstat.geom (>= 2.0), spatstat.core (>= 2.0), stats, graphics, grDevices, methods, utils
+Depends: R (>= 3.5.0), spatstat.data (>= 2.0), spatstat.geom (>= 1.65-0), spatstat.core (>= 1.65-0), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 2.1-0), Matrix
 Suggests: goftest, locfit, spatstat (>= 2.0)
 Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.geom, spatstat/spatstat.core
