Final realignment of function names for spatstat 2 family

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,7 +94,7 @@ export("deletebranch.linnet")
 export("deletebranch.lpp")
 export("densityEqualSplit")
 export("densityfun.lpp")
-export("densityHeatlpp")
+export("densityHeat.lpp")
 export("density.linnet")
 export("density.lpp")
 export("densitypointsLPP")
@@ -362,6 +362,7 @@ S3method("connected", "lpp")
 S3method("deletebranch", "linnet")
 S3method("deletebranch", "lpp")
 S3method("densityfun", "lpp")
+  S3method("densityHeat", "lpp")
   S3method("density", "linnet")
 S3method("density", "lpp")
 S3method("density", "splitppx")
