--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 2.2-0
-Date: 2021-06-21
+Version: 2.2-1
+Date: 2021-06-22
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -37,4 +37,4 @@ License: GPL (>= 2)
 URL: http://spatstat.org/
 NeedsCompilation: yes
 ByteCompile: true
-BugReports: https://github.com/baddstats/spatstat.linnet/issues
+BugReports: https://github.com/spatstat/spatstat.linnet/issues
