--- a/NAMESPACE
+++ b/NAMESPACE
@@ -242,6 +242,7 @@ export("resampleNetworkDataFrame")
 export("rescale.linnet")
 export("rescale.lpp")
 export("resolve.heat.steps")
+export("response.lppm")
 export("rhohat.lpp")
 export("rhohat.lppm")
 export("rjitterlpp")
@@ -440,6 +441,7 @@ S3method("print", "summary.lpp")
 S3method("relrisk", "lpp")
   S3method("rescale", "linnet")
   S3method("rescale", "lpp")
+  S3method("response", "lppm")
 S3method("rhohat", "lpp")
 S3method("rhohat", "lppm")
 S3method("roc", "lpp")
