--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 2.2-1
-Date: 2021-06-22
+Version: 2.2-1.001
+Date: 2021-06-28
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -20,9 +20,10 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Suman", "Rakshit",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 2.1-0), spatstat.geom (>= 2.2-0), spatstat.core (>= 2.2-0), stats, graphics, grDevices, methods, utils
+Depends: R (>= 3.5.0), spatstat.data (>= 2.1-0), spatstat.geom (>= 2.2-0), spatstat.core (>= 2.2-0.006), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 2.2-0), Matrix
 Suggests: goftest, locfit, spatstat (>= 2.0-0)
+Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.geom, spatstat/spatstat.core, spatstat/spatstat
 Description: Defines types of spatial data on a linear network
 	     and provides functionality for geometrical operations,
 	     data analysis and modelling of data on a linear network,
