--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ env:
   USE_BSPM: "true"
   _R_CHECK_FORCE_SUGGESTS_: "false"
   SPATSTAT_TEST: "true"
+  R_REMOTES_UPGRADE: "never"
 
 jobs:
   ci:
@@ -31,6 +32,9 @@ jobs:
           curl -OLs https://eddelbuettel.github.io/r-ci/run.sh
           chmod 0755 run.sh
           ./run.sh bootstrap
+
+      - name: Dependencies Binary
+        run: ./run.sh install_r spatstat.data spatstat.geom spatstat.core
 
       - name: Dependencies
         run: ./run.sh install_all
