--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.5.0), spatstat.data (>= 2.1-0), spatstat.geom (>= 2.2-0.003), spatstat.core (>= 2.2-0.009), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 2.2-0), Matrix
 Suggests: goftest, locfit, spatstat (>= 2.0-0)
-Remotes: spatstat/spatstat.utils, spatstat/spatstat.data, spatstat/spatstat.geom, spatstat/spatstat.core, spatstat/spatstat
+Additional_repositories: https://spatstat.r-universe.dev
 Description: Defines types of spatial data on a linear network
 	     and provides functionality for geometrical operations,
 	     data analysis and modelling of data on a linear network,
