Add methods for 'persp' and 'sdr'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ import(stats,graphics,grDevices,methods,utils)
 import(spatstat.utils)
 import(spatstat.data,spatstat.geom,spatstat.core)
 
-import(Matrix)
+import(Matrix,spatstat.sparse)
 
 ## ................ Load dynamic library ..............
 ##      (native routines are registered in init.c)
@@ -212,6 +212,8 @@ export("Ops.linim")
 export("Ops.linimlist")
 export("pairdist.lpp")
 export("pairs.linim")
+export("persp.linfun")
+export("persp.linim")
 export("pixellate.linnet")
 export("plot.linfun")
 export("plot.linim")
@@ -257,6 +259,7 @@ export("runiflpp")
 export("scalardilate.linim")
 export("scalardilate.linnet")
 export("scalardilate.lpp")
+export("sdr.lpp")
 export("shift.linim")
 export("shift.linnet")
 export("shift.lpp") 
@@ -417,6 +420,8 @@ S3method("nsegments", "lpp")
 S3method("nvertices", "linnet")
 S3method("pairdist", "lpp")
 S3method("pairs", "linim")
+ S3method("persp", "linfun")
+ S3method("persp", "linim")
 S3method("pixellate", "linnet")
   S3method("plot", "linfun")
 S3method("plot", "linim")
@@ -451,6 +456,7 @@ S3method("roc", "lppm")
   S3method("scalardilate", "linim")
   S3method("scalardilate", "linnet")
   S3method("scalardilate", "lpp")
+S3method("sdr", "lpp")
   S3method("shift", "linim")
   S3method("shift", "linnet")
   S3method("shift", "lpp")
