--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 2.2-1.003
-Date: 2021-07-01
+Version: 2.2-1.004
+Date: 2021-07-09
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -21,7 +21,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.5.0), spatstat.data (>= 2.1-0), spatstat.geom (>= 2.2-0.003), spatstat.core (>= 2.2-0.009), stats, graphics, grDevices, methods, utils
-Imports: spatstat.utils (>= 2.2-0), Matrix
+Imports: spatstat.utils (>= 2.2-0), Matrix, spatstat.sparse (>= 2.0)
 Suggests: goftest, locfit, spatstat (>= 2.0-0)
 Additional_repositories: https://spatstat.r-universe.dev
 Description: Defines types of spatial data on a linear network
