rjitterlpp -> rjitter.lpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -247,7 +247,7 @@ export("resolve.heat.steps")
 export("response.lppm")
 export("rhohat.lpp")
 export("rhohat.lppm")
-export("rjitterlpp")
+export("rjitter.lpp")
 export("rlpp")
 export("roc.lpp")
 export("roc.lppm")
@@ -449,6 +449,7 @@ S3method("relrisk", "lpp")
   S3method("response", "lppm")
 S3method("rhohat", "lpp")
 S3method("rhohat", "lppm")
+S3method("rjitter", "lpp")
 S3method("roc", "lpp")
 S3method("roc", "lppm")
   S3method("rotate", "linnet")
