--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export("bw.voronoi")
 export("cdf.test.lpp")
 export("cdf.test.lppm")
 export("chop.linnet")
+export("circumradius.linnet")
 export("clickjoin")
 export("clicklpp")
 export("coef.lppm")
@@ -248,6 +249,7 @@ export("response.lppm")
 export("rhohat.lpp")
 export("rhohat.lppm")
 export("rjitter.lpp")
+export("rjitterlpp")
 export("rlpp")
 export("roc.lpp")
 export("roc.lppm")
@@ -358,6 +360,7 @@ S3method("berman.test", "lppm")
 S3method("boundingradius", "linnet")
 S3method("cdf.test", "lpp")
 S3method("cdf.test", "lppm")
+S3method("circumradius", "linnet")
   S3method("coef", "lppm")
 S3method("connected", "linnet")
 S3method("connected", "lpp")
