--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 2.3-1
-Date: 2021-12-11
+Version: 2.3-1.001
+Date: 2022-01-05
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -20,9 +20,10 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Suman", "Rakshit",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 2.1-0), spatstat.geom (>= 2.3-0), spatstat.core (>= 2.3-0), stats, graphics, grDevices, methods, utils
+Depends: R (>= 3.5.0), spatstat.data (>= 2.1-0), spatstat.geom (>= 2.3-0), spatstat.random (>= 2.0), spatstat.core (>= 2.3-2.008), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 2.2-0), Matrix, spatstat.sparse (>= 2.0)
 Suggests: goftest, locfit, spatstat (>= 2.0-0)
+Additional_repositories: https://spatstat.r-universe.dev
 Description: Defines types of spatial data on a linear network
 	     and provides functionality for geometrical operations,
 	     data analysis and modelling of data on a linear network,
