--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: spatstat.linnet
-Version: 2.3-2
-Date: 2022-02-12
+Version: 2.3-2.001
+Date: 2022-04-05
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
-       	            email = "Adrian.Baddeley@curtin.edu.au"),
+       	            email = "Adrian.Baddeley@curtin.edu.au",
+		    comment = c(ORCID="0000-0001-9499-8382")),
 	     person("Rolf", "Turner", 
                     role = "aut",
- 	            email="r.turner@auckland.ac.nz"),
+ 	            email="r.turner@auckland.ac.nz",
+		    comment=c(ORCID="0000-0001-5521-5218")),
 	     person("Ege",   "Rubak", 
                     role = "aut",
-		    email = "rubak@math.aau.dk"),
+		    email = "rubak@math.aau.dk",
+		    comment=c(ORCID="0000-0002-6675-533X")),
 	     person("Ottmar", "Cronie",
 	            role = "ctb"),
 	     person("Tilman", "Davies",
@@ -23,6 +26,7 @@ Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.5.0), spatstat.data (>= 2.1-0), spatstat.geom (>= 2.3-0), spatstat.random (>= 2.0), spatstat.core (>= 2.3-2), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 2.2-0), Matrix, spatstat.sparse (>= 2.0)
 Suggests: goftest, locfit, spatstat (>= 2.0-0)
+Additional_repositories: https://spatstat.r-universe.dev
 Description: Defines types of spatial data on a linear network
 	     and provides functionality for geometrical operations,
 	     data analysis and modelling of data on a linear network,
