evalCovar changed to spatialCovariateEvidence

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,7 +116,6 @@ export("domain.lppm")
 export("emend.lppm")
 export("envelope.lpp")
 export("envelope.lppm")
-export("evalCovar.lppm")
 export("eval.linim")
 export("extractAIC.lppm")
 export("extractbranch")
@@ -267,6 +266,7 @@ export("shift.linnet")
 export("shift.lpp") 
 export("simulate.lppm")
 export("sortalongsegment")
+export("spatialCovariateEvidence.lppm")
 export("subset.lpp")
 export("summary.linfun")
 export("summary.linim")
@@ -384,7 +384,6 @@ S3method("diameter", "linnet")
   S3method("emend", "lppm")
   S3method("envelope", "lpp")
   S3method("envelope", "lppm")
-S3method("evalCovar", "lppm")
   S3method("extractAIC", "lppm")
 S3method("extractbranch", "linnet")
 S3method("extractbranch", "lpp")
@@ -465,6 +464,7 @@ S3method("sdr", "lpp")
   S3method("shift", "linnet")
   S3method("shift", "lpp")
   S3method("simulate", "lppm")
+S3method("spatialCovariateEvidence", "lppm")
 S3method("subset", "lpp")
   S3method("summary", "linfun")
   S3method("summary", "linim")
