second moment functions using Euclidean distance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,12 +143,15 @@ export("joinVertices")
 export("ldtEngine")
 export("lineardirichlet")
 export("lineardisc")
+export("linearEuclidEngine")
 export("linearK")
 export("linearKcross")
 export("linearKcross.inhom")
 export("linearKdot")
 export("linearKdot.inhom")
 export("linearKengine")
+export("linearKEuclid")
+export("linearKEuclidInhom")
 export("linearKinhom")
 export("linearKmulti")
 export("linearKmultiEngine")
@@ -161,6 +164,8 @@ export("linearpcfcross.inhom")
 export("linearpcfdot")
 export("linearpcfdot.inhom")
 export("linearpcfengine")
+export("linearpcfEuclid")
+export("linearpcfEuclidInhom")
 export("linearpcfinhom")
 export("linearpcfmulti")
 export("linearPCFmultiEngine")
