--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,6 +144,7 @@ export("ldtEngine")
 export("lineardirichlet")
 export("lineardisc")
 export("linearEuclidEngine")
+export("linearJinhom")
 export("linearK")
 export("linearKcross")
 export("linearKcross.inhom")
@@ -254,6 +255,7 @@ export("rhohat.lppm")
 export("rjitter.lpp")
 export("rjitterlpp")
 export("rlpp")
+export("rmaxEuclidean")
 export("roc.lpp")
 export("roc.lppm")
 export("rotate.linnet")
@@ -281,6 +283,7 @@ export("summary.lintess")
 export("summary.lpp")
 export("summary.lppm")
 export("superimpose.lpp")
+export("terminalvertices")
 export("terms.lppm")
 export("text.lpp")
 export("thinNetwork")
