Reorganised resolve.lambda

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,7 +125,6 @@ export("fitted.lppm")
 export("flatdensityatpointslpp")
 export("flatdensityfunlpp")
 export("formula.lppm")
-export("getlambda.lpp")
 export("heatkernelapprox")
 export("identify.lpp")
 export("insertVertices")
@@ -249,6 +248,7 @@ export("resampleNetworkDataFrame")
 export("rescale.linnet")
 export("rescale.lpp")
 export("resolve.heat.steps")
+export("resolve.lambda.lpp")
 export("response.lppm")
 export("rhohat.lpp")
 export("rhohat.lppm")
@@ -455,6 +455,7 @@ S3method("print", "summary.lpp")
 S3method("relrisk", "lpp")
   S3method("rescale", "linnet")
   S3method("rescale", "lpp")
+S3method("resolve.lambda", "lpp")
   S3method("response", "lppm")
 S3method("rhohat", "lpp")
 S3method("rhohat", "lppm")
