--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 2.3-2.022
-Date: 2022-06-16
+Version: 2.3-2.023
+Date: 2022-06-17
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -23,7 +23,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Suman", "Rakshit",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 2.2-0.003), spatstat.geom (>= 2.4-0.024), spatstat.random (>= 2.2-0.007), spatstat.explore, spatstat.model (>= 0.0-0.003), stats, graphics, grDevices, methods, utils
+Depends: R (>= 3.5.0), spatstat.data (>= 2.2-0.003), spatstat.geom (>= 2.4-0.024), spatstat.random (>= 2.2-0.007), spatstat.explore (>= 2.999-999.005), spatstat.model (>= 0.0-0.003), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 2.3-1.004), Matrix, spatstat.sparse (>= 2.1-1)
 Suggests: goftest, locfit, spatstat (>= 2.0-0)
 Additional_repositories: https://spatstat.r-universe.dev
