Reorganised bw.relrisk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export("berman.test.lppm")
 export("boundingradius.linnet")
 export("branchlabelfun")
 export("bw.lppl")
+export("bw.relrisk.lpp")
 export("bw.relrisklpp")
 export("bw.voronoi")
 export("cdf.test.lpp")
@@ -365,6 +366,7 @@ S3method("auc", "lppm")
 S3method("berman.test", "lpp")
 S3method("berman.test", "lppm")
 S3method("boundingradius", "linnet")
+  S3method("bw.relrisk", "lpp")
 S3method("cdf.test", "lpp")
 S3method("cdf.test", "lppm")
 S3method("circumradius", "linnet")
