--- a/NAMESPACE
+++ b/NAMESPACE
@@ -272,6 +272,7 @@ export("shift.linim")
 export("shift.linnet")
 export("shift.lpp") 
 export("simulate.lppm")
+export("Smooth.lpp")
 export("sortalongsegment")
 export("spatialCovariateEvidence.lppm")
 export("subset.lpp")
@@ -474,6 +475,7 @@ S3method("sdr", "lpp")
   S3method("shift", "linnet")
   S3method("shift", "lpp")
   S3method("simulate", "lppm")
+S3method("Smooth", "lpp")
 S3method("spatialCovariateEvidence", "lppm")
 S3method("subset", "lpp")
   S3method("summary", "linfun")
