--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export("deviance.lppm")
 export("diameter.linnet")
 export("dirichletNetwork")
 export("distfun.lpp")
+export("distmap.lpp")
 export("divide.linnet")
 export("DoCountCrossEnds")
 export("DoCountEnds")
@@ -387,6 +388,7 @@ S3method("densityVoronoi", "lpp")
   S3method("deviance", "lppm")
 S3method("diameter", "linnet")
   S3method("distfun", "lpp")
+  S3method("distmap", "lpp")
  S3method("domain", "linfun")
  S3method("domain", "lintess")
  S3method("domain", "lpp")
