--- a/NAMESPACE
+++ b/NAMESPACE
@@ -264,6 +264,7 @@ export("rotate.linnet")
 export("rotate.lpp")
 export("rpoislpp")
 export("rSwitzerlpp")
+export("rThomaslpp")
 export("runiflpp")
 export("scalardilate.linim")
 export("scalardilate.linnet")
