Allow linnet to have marks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,8 @@ export("lppm")
 export("lppm.formula")
 export("lppm.lpp")
 export("makeLinnetTolerance")
+export("marks.linnet")
+export("marks<-.linnet")
 export("marks.lintess")
 export("marks<-.lintess")
 export("marks<-.lpp")
@@ -418,6 +420,7 @@ S3method("is.stationary", "lppm")
   S3method("[", "lpp")
 S3method("lppm", "formula")
 S3method("lppm", "lpp")
+S3method("marks", "linnet")
 S3method("marks", "lintess")
   S3method("mean", "linim")
   S3method("median", "linim")
@@ -510,6 +513,7 @@ S3method("Window", "lintess")
 #      Assignment methods                   
 # ......................................... 
   S3method("[<-", "linim")
+S3method("marks<-", "linnet")
 S3method("marks<-", "lintess")
 S3method("marks<-", "lpp")
 S3method("tilenames<-", "lintess")
