--- a/NAMESPACE
+++ b/NAMESPACE
@@ -306,6 +306,7 @@ export("unmark.lintess")
 export("unmark.lpp")
 export("unstack.lintess")
 export("unstack.lpp")
+export("updateData.lppm")
 export("update.lppm")
 export("validate.lpp.coords")
 export("valid.lppm")
@@ -500,6 +501,7 @@ S3method("unmark", "lintess")
 S3method("unmark", "lpp")
 S3method("unstack", "lintess")
 S3method("unstack", "lpp")
+S3method("updateData", "lppm")
   S3method("update", "lppm")
   S3method("valid", "lppm")
   S3method("vcov", "lppm")
