--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,6 +144,8 @@ export("joinVertices")
 export("ldtEngine")
 export("lineardirichlet")
 export("lineardisc")
+export("lineardiscEngine")
+export("lineardisclength")
 export("linearEuclidEngine")
 export("linearJinhom")
 export("linearK")
