--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 2.999-999.021
-Date: 2022-10-23
+Version: 3.0-0
+Date: 2022-10-24
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -25,9 +25,9 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Ottmar", "Cronie",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 2.999-999), spatstat.geom (>= 2.999-999.003), spatstat.random (>= 2.999-999), spatstat.explore (>= 2.999-999.029), spatstat.model (>= 2.999-999.022), stats, graphics, grDevices, methods, utils
-Imports: spatstat.utils (>= 2.999-999), Matrix, spatstat.sparse (>= 2.999-999)
-Suggests: goftest, locfit, spatstat (>= 2.999-999)
+Depends: R (>= 3.5.0), spatstat.data (>= 3.0), spatstat.geom (>= 3.0), spatstat.random (>= 3.0), spatstat.explore (>= 3.0), spatstat.model (>= 3.0), stats, graphics, grDevices, methods, utils
+Imports: spatstat.utils (>= 3.0), Matrix, spatstat.sparse (>= 3.0)
+Suggests: goftest, locfit, spatstat (>= 3.0)
 Additional_repositories: https://spatstat.r-universe.dev
 Description: Defines types of spatial data on a linear network
 	     and provides functionality for geometrical operations,
