New function quantilefun.linim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -246,6 +246,7 @@ export("print.summary.lintess")
 export("print.summary.lpp")
 export("pseudoR2.lppm")
 export("qkdeEngine")
+export("quantilefun.linim")
 export("quantile.linim")
 export("rcelllpp")
 export("relrisk.lpp")
@@ -463,6 +464,7 @@ S3method("print", "summary.linnet")
 S3method("print", "summary.lintess")
 S3method("print", "summary.lpp")
   S3method("pseudoR2", "lppm")
+  S3method("quantilefun", "linim")
   S3method("quantile", "linim")
 S3method("relrisk", "lpp")
   S3method("rescale", "linnet")
