--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 3.0-4.004
-Date: 2023-02-04
+Version: 3.0-5
+Date: 2023-02-20
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -25,7 +25,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Ottmar", "Cronie",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 3.0), spatstat.geom (>= 3.0-5), spatstat.random (>= 3.1-2), spatstat.explore (>= 3.0), spatstat.model (>= 3.1-2.002), stats, graphics, grDevices, methods, utils
+Depends: R (>= 3.5.0), spatstat.data (>= 3.0), spatstat.geom (>= 3.0-6), spatstat.random (>= 3.1-3), spatstat.explore (>= 3.0-6), spatstat.model (>= 3.2-1), stats, graphics, grDevices, methods, utils
 Imports: spatstat.utils (>= 3.0), Matrix, spatstat.sparse (>= 3.0)
 Suggests: goftest, locfit, spatstat (>= 3.0)
 Additional_repositories: https://spatstat.r-universe.dev
