intersect.lintess now handles tess objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -299,6 +299,7 @@ export("thinNetwork")
 export("tile.lengths")
 export("tilenames.lintess")
 export("tilenames<-.lintess")
+export("traceTessLinnet")
 export("treebranchlabels")
 export("treeprune")
 export("unitname.linnet")
