getglmfit and friends have methods for lppm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,10 @@ export("fitted.lppm")
 export("flatdensityatpointslpp")
 export("flatdensityfunlpp")
 export("formula.lppm")
+export("getglmdata.lppm")
+export("getglmfit.lppm")
+export("getglmsubset.lppm")
+export("hasglmfit.lppm")
 export("heatkernelapprox")
 export("identify.lpp")
 export("insertVertices")
@@ -409,6 +413,10 @@ S3method("extractbranch", "linnet")
 S3method("extractbranch", "lpp")
 S3method("fitted", "lppm")
   S3method("formula", "lppm")
+S3method("getglmdata", "lppm")
+S3method("getglmfit", "lppm")
+S3method("getglmsubset", "lppm")
+S3method("hasglmfit", "lppm")
  S3method("identify", "lpp")
 S3method("integral", "linfun")
 S3method("integral", "linim")
