New internal class 'exactlppm'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,10 @@ export("emend.lppm")
 export("envelope.lpp")
 export("envelope.lppm")
 export("eval.linim")
+export("evaluateNetCovariate")
+export("evaluateNetCovariateAlongNetwork")
+export("evaluateNetCovariateAtPoints")
+export("exactlppm")
 export("extractAIC.lppm")
 export("extractbranch")
 export("extractbranch.linnet")
@@ -142,7 +146,9 @@ export("is.connected.linnet")
 export("is.marked.lppm")
 export("is.multitype.lpp")
 export("is.multitype.lppm")
+export("is.poisson.exactlppm")
 export("is.poisson.lppm")
+export("is.stationary.exactlppm")
 export("is.stationary.lppm")
 export("joinVertices")
 export("ldtEngine")
@@ -237,7 +243,9 @@ export("plot.lpp")
 export("plot.lppm")
 export("pointsAlongNetwork")
 export("points.lpp")
+export("predict.exactlppm")
 export("predict.lppm")
+export("print.exactlppm")
 export("print.linfun")
 export("print.linim")
 export("print.linnet")
@@ -260,6 +268,7 @@ export("rescale.linnet")
 export("rescale.lpp")
 export("resolve.heat.steps")
 export("resolve.lambda.lpp")
+export("response.exactlppm")
 export("response.lppm")
 export("rhohat.lpp")
 export("rhohat.lppm")
@@ -285,6 +294,7 @@ export("shift.lpp")
 export("simulate.lppm")
 export("Smooth.lpp")
 export("sortalongsegment")
+export("spatialCovariateEvidence.exactlppm")
 export("spatialCovariateEvidence.lppm")
 export("subset.lpp")
 export("summary.linfun")
@@ -425,7 +435,9 @@ S3method("is.connected", "linnet")
   S3method("is.marked", "lppm")
   S3method("is.multitype", "lpp")
   S3method("is.multitype", "lppm")
+S3method("is.poisson", "exactlppm")
 S3method("is.poisson", "lppm")
+S3method("is.stationary", "exactlppm")
 S3method("is.stationary", "lppm")
   S3method("[", "linim")
   S3method("[", "linnet")
@@ -461,7 +473,9 @@ S3method("plot", "lintess")
 S3method("plot", "lpp")
   S3method("plot", "lppm")
 S3method("points", "lpp")
+S3method("predict", "exactlppm")
 S3method("predict", "lppm")
+S3method("print", "exactlppm")
   S3method("print", "linfun")
   S3method("print", "linim")
 S3method("print", "linnet")
@@ -479,6 +493,7 @@ S3method("relrisk", "lpp")
   S3method("rescale", "linnet")
   S3method("rescale", "lpp")
 S3method("resolve.lambda", "lpp")
+S3method("response", "exactlppm")
   S3method("response", "lppm")
 S3method("rhohat", "lpp")
 S3method("rhohat", "lppm")
@@ -496,6 +511,7 @@ S3method("sdr", "lpp")
   S3method("shift", "lpp")
   S3method("simulate", "lppm")
 S3method("Smooth", "lpp")
+S3method("spatialCovariateEvidence", "exactlppm")
 S3method("spatialCovariateEvidence", "lppm")
 S3method("subset", "lpp")
   S3method("summary", "linfun")
