--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 3.2-1.002
-Date: 2024-09-06
+Version: 3.2-1.004
+Date: 2024-09-19
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -25,8 +25,8 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Ottmar", "Cronie",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 3.0-4), spatstat.univar (>= 3.0-0), spatstat.geom (>= 3.2-9.028), spatstat.random (>= 3.2-3.003), spatstat.explore (>= 3.2-7.006), spatstat.model (>= 3.2-11.005), stats, graphics, grDevices, methods, utils
-Imports: spatstat.utils (>= 3.0-5), Matrix, spatstat.sparse (>= 3.1-0)
+Depends: R (>= 3.5.0), stats, graphics, grDevices, methods, utils, spatstat.data (>= 3.1-2), spatstat.univar (>= 3.0-1), spatstat.geom (>= 3.3-3), spatstat.random (>= 3.3-2), spatstat.explore (>= 3.3-2), spatstat.model (>= 3.3-1)
+Imports: Matrix, spatstat.utils (>= 3.1-0), spatstat.sparse (>= 3.1-0)
 Suggests: goftest, locfit, spatstat (>= 3.0)
 Description: Defines types of spatial data on a linear network
 	     and provides functionality for geometrical operations,
