--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export("getglmfit.lppm")
 export("getglmsubset.lppm")
 export("hasglmfit.lppm")
 export("heatkernelapprox")
+export("identify.linnet")
 export("identify.lpp")
 export("insertVertices")
 export("integral.linfun")
@@ -427,6 +428,7 @@ S3method("getglmdata", "lppm")
 S3method("getglmfit", "lppm")
 S3method("getglmsubset", "lppm")
 S3method("hasglmfit", "lppm")
+  S3method("identify", "linnet")
  S3method("identify", "lpp")
 S3method("integral", "linfun")
 S3method("integral", "linim")
