--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export("as.im.linim")
 export("as.linfun")
 export("as.linfun.linfun")
 export("as.linfun.linim")
+export("as.linfun.linnet")
 export("as.linfun.lintess")
 export("as.linim")
 export("as.linim.default")
@@ -137,6 +138,7 @@ export("getglmsubset.lppm")
 export("hasglmfit.lppm")
 export("heatkernelapprox")
 export("identify.linnet")
+export("identify.lintess")
 export("identify.lpp")
 export("insertVertices")
 export("integral.linfun")
@@ -321,6 +323,7 @@ export("unitname.linnet")
 export("unitname<-.linnet")
 export("unitname.lpp")
 export("unitname<-.lpp")
+export("unmark.linnet")
 export("unmark.lintess")
 export("unmark.lpp")
 export("unstack.lintess")
@@ -366,6 +369,7 @@ S3method("as.data.frame", "lintess")
   S3method("as.im", "linim")
 S3method("as.linfun", "linfun")
   S3method("as.linfun", "linim")
+  S3method("as.linfun", "linnet")
   S3method("as.linfun", "lintess")
   S3method("as.linim", "default")
   S3method("as.linim", "linfun")
@@ -429,6 +433,7 @@ S3method("getglmfit", "lppm")
 S3method("getglmsubset", "lppm")
 S3method("hasglmfit", "lppm")
   S3method("identify", "linnet")
+  S3method("identify", "lintess")
  S3method("identify", "lpp")
 S3method("integral", "linfun")
 S3method("integral", "linim")
@@ -528,6 +533,7 @@ S3method("text", "lpp")
 S3method("tilenames", "lintess")
 S3method("unitname", "linnet")
 S3method("unitname", "lpp")
+S3method("unmark", "linnet")
 S3method("unmark", "lintess")
 S3method("unmark", "lpp")
 S3method("unstack", "lintess")
