--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
 Version: 3.3-2
-Date: 2025-09-23
+Date: 2025-09-24
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -25,9 +25,9 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Ottmar", "Cronie",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), stats, graphics, grDevices, methods, utils, spatstat.data (>= 3.1-6), spatstat.univar (>= 3.1-4), spatstat.geom (>= 3.6-0), spatstat.random (>= 3.4-1), spatstat.explore (>= 3.5-2), spatstat.model (>= 3.4-0)
-Imports: Matrix, spatstat.utils (>= 3.1-5), spatstat.sparse (>= 3.1-0)
-Suggests: goftest, locfit, spatstat (>= 3.0)
+Depends: R (>= 3.5.0), stats, graphics, grDevices, methods, utils, spatstat.data (>= 3.1-6), spatstat.univar (>= 3.1-4), spatstat.geom (>= 3.6), spatstat.random (>= 3.4-1), spatstat.explore (>= 3.5-2), spatstat.model (>= 3.4)
+Imports: Matrix, spatstat.utils (>= 3.1-5), spatstat.sparse (>= 3.1)
+Suggests: goftest, locfit, spatstat (>= 3.4)
 Description: Defines types of spatial data on a linear network
 	     and provides functionality for geometrical operations,
 	     data analysis and modelling of data on a linear network,
