More support for lintess

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ useDynLib(spatstat.linnet, .registration=TRUE, .fixes="SL_")
 export("addVertices")
 export("affine.linim")
 export("affine.linnet") 
+export("affine.lintess")
 export("affine.lpp") 
 export("anova.lppm")
 export("ApplyConnected")
@@ -52,7 +53,12 @@ export("as.linnet.lintess")
 export("as.linnet.lpp")
 export("as.linnet.lppm")
 export("as.linnet.psp")
+export("as.lintess")
+export("as.lintess.linearquadratcount")
+export("as.lintess.linnet")
+export("as.lintess.lintess")
 export("as.lpp")
+export("as.owin.linearquadratcount")
 export("as.owin.linfun")
 export("as.owin.linnet")
 export("as.owin.lintess")
@@ -111,6 +117,7 @@ export("distmap.lpp")
 export("divide.linnet")
 export("DoCountCrossEnds")
 export("DoCountEnds")
+export("domain.linearquadratcount")
 export("domain.linfun")
 export("domain.lintess")
 export("domain.lpp")
@@ -131,6 +138,9 @@ export("FDMKERNEL")
 export("fitted.lppm")
 export("flatdensityatpointslpp")
 export("flatdensityfunlpp")
+export("flipxy.linnet") 
+export("flipxy.lintess")
+export("flipxy.lpp") 
 export("formula.lppm")
 export("getglmdata.lppm")
 export("getglmfit.lppm")
@@ -143,6 +153,7 @@ export("identify.lpp")
 export("insertVertices")
 export("integral.linfun")
 export("integral.linim")
+export("intensity.linearquadratcount")
 export("intensity.lpp")
 export("intersect.lintess")
 export("is.connected.linnet")
@@ -240,6 +251,7 @@ export("pairs.linim")
 export("persp.linfun")
 export("persp.linim")
 export("pixellate.linnet")
+export("plot.linearquadratcount")
 export("plot.linfun")
 export("plot.linim")
 export("plot.linnet")
@@ -263,6 +275,7 @@ export("print.summary.lintess")
 export("print.summary.lpp")
 export("pseudoR2.lppm")
 export("qkdeEngine")
+export("quadratcount.lpp")
 export("quantilefun.linim")
 export("quantile.linim")
 export("rcelllpp")
@@ -270,6 +283,7 @@ export("relrisk.lpp")
 export("repairNetwork")
 export("resampleNetworkDataFrame")
 export("rescale.linnet")
+export("rescale.lintess")
 export("rescale.lpp")
 export("resolve.heat.steps")
 export("resolve.lambda.lpp")
@@ -284,6 +298,7 @@ export("rmaxEuclidean")
 export("roc.lpp")
 export("roc.lppm")
 export("rotate.linnet")
+export("rotate.lintess")
 export("rotate.lpp")
 export("rpoislpp")
 export("rSwitzerlpp")
@@ -291,10 +306,13 @@ export("rThomaslpp")
 export("runiflpp")
 export("scalardilate.linim")
 export("scalardilate.linnet")
+export("scalardilate.lintess")
 export("scalardilate.lpp")
 export("sdr.lpp")
+export("shift.linearquadratcount")
 export("shift.linim")
 export("shift.linnet")
+export("shift.lintess")
 export("shift.lpp") 
 export("simulate.lppm")
 export("Smooth.lpp")
@@ -339,6 +357,7 @@ export("vertexdegree")
 export("vertices.linnet")
 export("vnnFind")
 export("volume.linnet")
+export("Window.linearquadratcount")
 export("Window.linnet")
 export("Window<-.linnet")
 export("Window.lintess")
@@ -362,6 +381,7 @@ S3method("Summary", "linimlist")
 # ......................................... 
   S3method("affine", "linim")
   S3method("affine", "linnet")
+S3method("affine", "lintess")
   S3method("affine", "lpp")
   S3method("anova", "lppm")
   S3method("as.data.frame", "linfun")
@@ -383,6 +403,10 @@ S3method("as.linnet", "linnet")
  S3method("as.linnet", "lpp")
   S3method("as.linnet", "lppm")
  S3method("as.linnet", "psp")
+S3method("as.lintess", "linearquadratcount")
+S3method("as.lintess", "linnet")
+S3method("as.lintess", "lintess")
+S3method("as.owin", "linearquadratcount")
   S3method("as.owin", "linfun")
 S3method("as.owin", "linnet")
 S3method("as.owin", "lintess")
@@ -418,6 +442,7 @@ S3method("densityVoronoi", "lpp")
 S3method("diameter", "linnet")
   S3method("distfun", "lpp")
   S3method("distmap", "lpp")
+S3method("domain", "linearquadratcount")
  S3method("domain", "linfun")
  S3method("domain", "lintess")
  S3method("domain", "lpp")
@@ -429,6 +454,9 @@ S3method("diameter", "linnet")
 S3method("extractbranch", "linnet")
 S3method("extractbranch", "lpp")
 S3method("fitted", "lppm")
+  S3method("flipxy", "linnet")
+S3method("flipxy", "lintess")
+  S3method("flipxy", "lpp")
   S3method("formula", "lppm")
 S3method("getglmdata", "lppm")
 S3method("getglmfit", "lppm")
@@ -439,6 +467,7 @@ S3method("hasglmfit", "lppm")
  S3method("identify", "lpp")
 S3method("integral", "linfun")
 S3method("integral", "linim")
+S3method("intensity", "linearquadratcount")
 S3method("intensity", "lpp")
 S3method("is.connected", "linnet")
   S3method("is.marked", "lppm")
@@ -476,6 +505,7 @@ S3method("pairs", "linim")
  S3method("persp", "linfun")
  S3method("persp", "linim")
 S3method("pixellate", "linnet")
+S3method("plot", "linearquadratcount")
   S3method("plot", "linfun")
 S3method("plot", "linim")
  S3method("plot", "linnet")
@@ -497,10 +527,12 @@ S3method("print", "summary.linnet")
 S3method("print", "summary.lintess")
 S3method("print", "summary.lpp")
   S3method("pseudoR2", "lppm")
+  S3method("quadratcount", "lpp")
   S3method("quantilefun", "linim")
   S3method("quantile", "linim")
 S3method("relrisk", "lpp")
   S3method("rescale", "linnet")
+S3method("rescale", "lintess")
   S3method("rescale", "lpp")
 S3method("resolve.lambda", "lpp")
 S3method("response", "exactlppm")
@@ -511,13 +543,17 @@ S3method("rjitter", "lpp")
 S3method("roc", "lpp")
 S3method("roc", "lppm")
   S3method("rotate", "linnet")
+S3method("rotate", "lintess")
   S3method("rotate", "lpp")
   S3method("scalardilate", "linim")
   S3method("scalardilate", "linnet")
+S3method("scalardilate", "lintess")
   S3method("scalardilate", "lpp")
 S3method("sdr", "lpp")
+S3method("shift", "linearquadratcount")
   S3method("shift", "linim")
   S3method("shift", "linnet")
+S3method("shift", "lintess")
   S3method("shift", "lpp")
   S3method("simulate", "lppm")
 S3method("Smooth", "lpp")
@@ -547,6 +583,7 @@ S3method("updateData", "lppm")
   S3method("vcov", "lppm")
 S3method("vertices", "linnet")
 S3method("volume", "linnet")
+S3method("Window", "linearquadratcount")
 S3method("Window", "linnet")
 S3method("Window", "lintess")
  S3method("Window", "lpp")
