More code for quadrat counts/tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -276,6 +276,9 @@ export("print.summary.lpp")
 export("pseudoR2.lppm")
 export("qkdeEngine")
 export("quadratcount.lpp")
+export("quadrat.test.linearquadratcount") 
+export("quadrat.test.lpp") 
+export("quadrat.test.lppm") 
 export("quantilefun.linim")
 export("quantile.linim")
 export("rcelllpp")
@@ -528,6 +531,9 @@ S3method("print", "summary.lintess")
 S3method("print", "summary.lpp")
   S3method("pseudoR2", "lppm")
   S3method("quadratcount", "lpp")
+S3method("quadrat.test", "linearquadratcount")
+S3method("quadrat.test", "lpp")
+S3method("quadrat.test", "lppm")
   S3method("quantilefun", "linim")
   S3method("quantile", "linim")
 S3method("relrisk", "lpp")
