Partial residuals for lppm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -248,6 +248,7 @@ export("Ops.linim")
 export("Ops.linimlist")
 export("pairdist.lpp")
 export("pairs.linim")
+export("parres.lppm")
 export("persp.linfun")
 export("persp.linim")
 export("pixellate.linnet")
@@ -505,6 +506,7 @@ S3method("nsegments", "lpp")
 S3method("nvertices", "linnet")
 S3method("pairdist", "lpp")
 S3method("pairs", "linim")
+S3method("parres", "lppm")
  S3method("persp", "linfun")
  S3method("persp", "linim")
 S3method("pixellate", "linnet")
