Residuals on a network

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -289,6 +289,7 @@ export("resampleNetworkDataFrame")
 export("rescale.linnet")
 export("rescale.lintess")
 export("rescale.lpp")
+export("residuals.lppm")
 export("resolve.heat.steps")
 export("resolve.lambda.lpp")
 export("response.exactlppm")
@@ -542,6 +543,7 @@ S3method("relrisk", "lpp")
   S3method("rescale", "linnet")
 S3method("rescale", "lintess")
   S3method("rescale", "lpp")
+  S3method("residuals", "lppm")
 S3method("resolve.lambda", "lpp")
 S3method("response", "exactlppm")
   S3method("response", "lppm")
