Implemented diagnose.lppm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,8 @@ export("densityQuick.lpp")
 export("density.splitppx")
 export("densityVoronoi.lpp")
 export("deviance.lppm")
+export("diagLppmEngine")
+export("diagnose.lppm")
 export("diameter.linnet")
 export("dirichletNetwork")
 export("distfun.lpp")
@@ -122,6 +124,7 @@ export("domain.linfun")
 export("domain.lintess")
 export("domain.lpp")
 export("domain.lppm")
+export("eem.lppm")
 export("emend.lppm")
 export("envelope.lpp")
 export("envelope.lppm")
@@ -222,6 +225,7 @@ export("lppm.lpp")
 export("lurking.lpp")               
 export("lurking.lppm")               
 export("makeLinnetTolerance")
+export("marginalIntegralOfLinim")
 export("marks.linnet")
 export("marks<-.linnet")
 export("marks.lintess")
@@ -252,6 +256,7 @@ export("parres.lppm")
 export("persp.linfun")
 export("persp.linim")
 export("pixellate.linnet")
+export("plot.diaglppm")
 export("plot.linearquadratcount")
 export("plot.linfun")
 export("plot.linim")
@@ -263,6 +268,7 @@ export("pointsAlongNetwork")
 export("points.lpp")
 export("predict.exactlppm")
 export("predict.lppm")
+export("print.diaglppm")
 export("print.exactlppm")
 export("print.linfun")
 export("print.linim")
@@ -444,6 +450,7 @@ S3method("density", "lpp")
 S3method("density", "splitppx")
 S3method("densityVoronoi", "lpp")
   S3method("deviance", "lppm")
+  S3method("diagnose", "lppm")
 S3method("diameter", "linnet")
   S3method("distfun", "lpp")
   S3method("distmap", "lpp")
@@ -452,6 +459,7 @@ S3method("domain", "linearquadratcount")
  S3method("domain", "lintess")
  S3method("domain", "lpp")
  S3method("domain", "lppm")
+  S3method("eem", "lppm")
   S3method("emend", "lppm")
   S3method("envelope", "lpp")
   S3method("envelope", "lppm")
@@ -511,6 +519,7 @@ S3method("parres", "lppm")
  S3method("persp", "linfun")
  S3method("persp", "linim")
 S3method("pixellate", "linnet")
+  S3method("plot", "diaglppm")
 S3method("plot", "linearquadratcount")
   S3method("plot", "linfun")
 S3method("plot", "linim")
@@ -521,6 +530,7 @@ S3method("plot", "lpp")
 S3method("points", "lpp")
 S3method("predict", "exactlppm")
 S3method("predict", "lppm")
+S3method("print", "diaglppm")
 S3method("print", "exactlppm")
   S3method("print", "linfun")
   S3method("print", "linim")
