Q-Q plot for lppm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -264,6 +264,7 @@ export("plot.linnet")
 export("plot.lintess")
 export("plot.lpp")
 export("plot.lppm")
+export("plot.qqlppm")
 export("pointsAlongNetwork")
 export("points.lpp")
 export("predict.exactlppm")
@@ -276,12 +277,14 @@ export("print.linnet")
 export("print.lintess")
 export("print.lpp")
 export("print.lppm")
+export("print.qqlppm")
 export("print.summary.linim")
 export("print.summary.linnet")
 export("print.summary.lintess")
 export("print.summary.lpp")
 export("pseudoR2.lppm")
 export("qkdeEngine")
+export("qqplot.lppm")
 export("quadratcount.lpp")
 export("quadrat.test.linearquadratcount") 
 export("quadrat.test.lpp") 
@@ -527,6 +530,7 @@ S3method("plot", "linim")
 S3method("plot", "lintess")
 S3method("plot", "lpp")
   S3method("plot", "lppm")
+S3method("plot", "qqlppm")
 S3method("points", "lpp")
 S3method("predict", "exactlppm")
 S3method("predict", "lppm")
@@ -538,6 +542,7 @@ S3method("print", "linnet")
 S3method("print", "lintess")
 S3method("print", "lpp")
   S3method("print", "lppm")
+S3method("print", "qqlppm")
 S3method("print", "summary.linim")
 S3method("print", "summary.linnet")
 S3method("print", "summary.lintess")
